fix: gap in mobile

--- a/src/scss/_feed.scss
+++ b/src/scss/_feed.scss
@@ -35,5 +35,5 @@ footer.pagination {
 .cols {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	gap: var(--gap);
+	gap: 0 var(--gap);
 }
